traversal.snake.Snake.scala.error
Compilation error:
Snake:23: error: '(' expected but identifier found.
      if getDirection()==Direction.EST {
         ^Snake:26: error: '(' expected but identifier found.
      if getDirection()==Direction.OUEST {
         ^Snake:30: error: illegal start of simple expression
    }
    ^