traversal.snake.Snake.scala.code
override def run() {
  
  //METHODE FIN
  def posfin():Boolean = {
    if (estFaceMur&&getDirection()==Direction.EST) {
      gauche();
      if (estFaceMur) {
        droite();
        return true
      }
      droite()
    }
    
    return false
  }
  
  //METHODE AVANCE
  def avanserp() {
		while (!estFaceMur) {
      avance()
    }
    if (!posfin()) {
      if getDirection()==Direction.EST {
        gauche();avance();gauche()
      }
      if getDirection()==Direction.OUEST {
        droite();avance();droite()
        
      }
    }
	}

baisseBrosse()
while (!posfin()) {
  avanserp()
}
  
}